style: fix overflow of file name
fix overflow of file name that mainly occurs on mobile

--- a/static_in_dev/index.css
+++ b/static_in_dev/index.css
@@ -649,6 +649,9 @@ body {
   .config {
     padding: 22px 18px !important;
   }
+  .config-wrapper-row {
+    padding-top: 0px !important;
+  }
   ._segment_form_1{
     padding: 0px 20px;
   }
@@ -729,14 +732,6 @@ body {
   border-radius: 25px;
   cursor: pointer;
 }
-.file-info {
-  display: flex;
-  align-items: center;
-  font-size: 15px;
-}
-.file-icon {
-  margin-right: 10px;
-}
 .file-name,
 .file-size {
   padding: 0 3px;
@@ -744,10 +739,29 @@ body {
 .remove-file-icon {
   cursor: pointer;
 }
+.file-icon {
+  padding: 0 5px;
+}
+.file-info {
+  display: flex;
+  align-items: center;
+  width: 100%;
+}
+.file-name {
+  flex: 9;
+  word-wrap: break-word;
+  width: 55%;
+}
+.file-size, .remove-file-icon {
+  flex: 1;
+}
+.separator {
+  margin: 0 5px;
+}
 
 .progress-bar {
   display: none;
-  width: 100%;
+  width: 0;
   height: 5px;
   border-radius: 25px;
   background-color: #4bb543;
@@ -1372,13 +1386,17 @@ audio {
   font-weight: 600;
 }
 
-.main-container {
+.main-container, .error-container {
   width: 100%;
   height: 30vh;
   display: flex;
   flex-flow: column;
   align-items: center;
   margin-top: 180px;
+}
+
+.error-container {
+  margin-top: 50px;
 }
 
 .check-container {
